--- a/alx-rick-and-morty-app/package.json
+++ b/alx-rick-and-morty-app/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.8",
+    "@sentry/nextjs": "^9.35.0",
+    "@sentry/react": "^9.35.0",
     "@types/graphql": "^14.2.3",
     "graphql": "^16.11.0",
     "next": "15.3.4",
@@ -22,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/shimmer": "^1.2.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "tailwindcss": "^4",
